commit changes done with has so she can work on last version (another merge was done right after this)

--- a/HPLC_RUN_NOTEBOOK.ipynb
+++ b/HPLC_RUN_NOTEBOOK.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,94 @@
      "text": [
       "{1: 'vehicles', 2: '10mg/kgTCB', 3: '3mg/kgTCB', 4: '0.3mg/kgTCB', 5: 'TCB+MDL', 6: '0.2mg/kgMDL'} /home/remi/jasmine/input/cache/TCB2_data_APRIL23/treatment_mapping.json\n",
       "TREATMENT DICT SAVED TOO /home/remi/jasmine/input/cache/TCB2_data_APRIL23/treatment_mapping.json\n",
-      "GETTING \"ratios_df\" FROM \"TCB2_data_APRIL23\" CACHE\n",
+      "TREATMENT MAPPING {1: 'vehicles', 2: '10mg/kgTCB', 3: '3mg/kgTCB', 4: '0.3mg/kgTCB', 5: 'TCB+MDL', 6: '0.2mg/kgMDL'} SAVED TO /home/remi/jasmine/input/cache/TCB2_data_APRIL23 SUBCACHE\n",
+      "GETTING \"ratios_df\" FROM \"TCB2_data_APRIL23\" CACHE\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mouse_id</th>\n",
+       "      <th>treatment</th>\n",
+       "      <th>BR_1</th>\n",
+       "      <th>compound_1</th>\n",
+       "      <th>BR_2</th>\n",
+       "      <th>compound_2</th>\n",
+       "      <th>compounds</th>\n",
+       "      <th>ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [mouse_id, treatment, BR_1, compound_1, BR_2, compound_2, compounds, ratio]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "from HPLC_MODULE_NOTEBOOK import * #Must be reimported when changes made to module file\n",
+    "\n",
+    "filename = 'TCB2_data_APRIL23.csv'  # TCB2 #using current working directory plus file name \n",
+    "compound_ratio_mapping = {'DOPAC': ['DA'],     # TCB2\n",
+    "                       '5HIAA': ['5HT'],\n",
+    "                       '3MT': ['DA'],\n",
+    "                       'HVA': ['DA', '3MT', 'DOPAC'],\n",
+    "                       'GLN': ['GLU']}\n",
+    "\n",
+    "treatment_mapping = {1: 'vehicles', 2: '10mg/kgTCB', 3: '3mg/kgTCB',\n",
+    "                  4: '0.3mg/kgTCB', 5: 'TCB+MDL', 6: '0.2mg/kgMDL'} \n",
+    "\n",
+    "palette_labeled = {'vehicles': \"white\",  # TCB2\n",
+    "                   '10mg/kgTCB': \"firebrick\",\n",
+    "                   '3mg/kgTCB': \"red\",\n",
+    "                   '0.3mg/kgTCB': \"salmon\",\n",
+    "                   'TCB+MDL': \"grey\",\n",
+    "                   '0.2mg/kgMDL': \"black\"}\n",
+    "\n",
+    "setTreatment(filename, treatment_mapping)\n",
+    "ratios_df = getRatiosDf(filename, treatment_mapping)\n",
+    "getRatiosPerRegion(ratios_df, compound_ratio_mapping) #ratios of interest\n",
+    "\n",
+    "doGrubsTest(getRawDF()) #Usage is something like this\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "GETTING \"ratios_df\" FROM \"TCB2_data_APRIL23\" CACHE\n"
      ]
     },
@@ -146,132 +233,104 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9990</th>\n",
-       "      <td>2</td>\n",
-       "      <td>vehicles</td>\n",
-       "      <td>Am</td>\n",
-       "      <td>DA</td>\n",
-       "      <td>V</td>\n",
-       "      <td>A</td>\n",
-       "      <td>DA/A</td>\n",
-       "      <td>88.500024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9991</th>\n",
-       "      <td>2</td>\n",
-       "      <td>vehicles</td>\n",
-       "      <td>Am</td>\n",
-       "      <td>DA</td>\n",
-       "      <td>V</td>\n",
-       "      <td>DOPAC</td>\n",
-       "      <td>DA/DOPAC</td>\n",
-       "      <td>73.912566</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9992</th>\n",
-       "      <td>2</td>\n",
-       "      <td>vehicles</td>\n",
-       "      <td>Am</td>\n",
-       "      <td>DA</td>\n",
-       "      <td>V</td>\n",
-       "      <td>5HTP</td>\n",
-       "      <td>DA/5HTP</td>\n",
-       "      <td>23.284040</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9994</th>\n",
-       "      <td>2</td>\n",
-       "      <td>vehicles</td>\n",
-       "      <td>Am</td>\n",
-       "      <td>DA</td>\n",
-       "      <td>V</td>\n",
-       "      <td>5HIAA</td>\n",
-       "      <td>DA/5HIAA</td>\n",
-       "      <td>6.021669</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9995</th>\n",
-       "      <td>2</td>\n",
-       "      <td>vehicles</td>\n",
-       "      <td>Am</td>\n",
-       "      <td>DA</td>\n",
-       "      <td>V</td>\n",
+       "      <th>3995486</th>\n",
+       "      <td>70</td>\n",
+       "      <td>10mg/kgTCB</td>\n",
+       "      <td>CE</td>\n",
        "      <td>5HT</td>\n",
-       "      <td>DA/5HT</td>\n",
-       "      <td>5.568548</td>\n",
+       "      <td>MR</td>\n",
+       "      <td>5HTP</td>\n",
+       "      <td>5HT/5HTP</td>\n",
+       "      <td>3.814665</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3995487</th>\n",
+       "      <td>70</td>\n",
+       "      <td>10mg/kgTCB</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>5HT</td>\n",
+       "      <td>MR</td>\n",
+       "      <td>DOPAC</td>\n",
+       "      <td>5HT/DOPAC</td>\n",
+       "      <td>6.449441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3995488</th>\n",
+       "      <td>70</td>\n",
+       "      <td>10mg/kgTCB</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>5HT</td>\n",
+       "      <td>MR</td>\n",
+       "      <td>DA</td>\n",
+       "      <td>5HT/DA</td>\n",
+       "      <td>17.743371</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3995489</th>\n",
+       "      <td>70</td>\n",
+       "      <td>10mg/kgTCB</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>5HT</td>\n",
+       "      <td>MR</td>\n",
+       "      <td>5HIAA</td>\n",
+       "      <td>5HT/5HIAA</td>\n",
+       "      <td>0.691156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3995490</th>\n",
+       "      <td>70</td>\n",
+       "      <td>10mg/kgTCB</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>5HT</td>\n",
+       "      <td>MR</td>\n",
+       "      <td>HVA</td>\n",
+       "      <td>5HT/HVA</td>\n",
+       "      <td>2.795106</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8176 rows × 8 columns</p>\n",
+       "<p>3437550 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      mouse_id treatment BR_1 compound_1 BR_2 compound_2    compounds   \n",
-       "9            2  vehicles   OF      LDOPA   PL         NA     LDOPA/NA  \\\n",
-       "10           2  vehicles   OF      LDOPA   PL      DOPAC  LDOPA/DOPAC   \n",
-       "11           2  vehicles   OF      LDOPA   PL       5HTP   LDOPA/5HTP   \n",
-       "12           2  vehicles   OF      LDOPA   PL         DA     LDOPA/DA   \n",
-       "13           2  vehicles   OF      LDOPA   PL      5HIAA  LDOPA/5HIAA   \n",
-       "...        ...       ...  ...        ...  ...        ...          ...   \n",
-       "9990         2  vehicles   Am         DA    V          A         DA/A   \n",
-       "9991         2  vehicles   Am         DA    V      DOPAC     DA/DOPAC   \n",
-       "9992         2  vehicles   Am         DA    V       5HTP      DA/5HTP   \n",
-       "9994         2  vehicles   Am         DA    V      5HIAA     DA/5HIAA   \n",
-       "9995         2  vehicles   Am         DA    V        5HT       DA/5HT   \n",
+       "         mouse_id   treatment BR_1 compound_1 BR_2 compound_2    compounds   \n",
+       "9               2    vehicles   OF      LDOPA   PL         NA     LDOPA/NA  \\\n",
+       "10              2    vehicles   OF      LDOPA   PL      DOPAC  LDOPA/DOPAC   \n",
+       "11              2    vehicles   OF      LDOPA   PL       5HTP   LDOPA/5HTP   \n",
+       "12              2    vehicles   OF      LDOPA   PL         DA     LDOPA/DA   \n",
+       "13              2    vehicles   OF      LDOPA   PL      5HIAA  LDOPA/5HIAA   \n",
+       "...           ...         ...  ...        ...  ...        ...          ...   \n",
+       "3995486        70  10mg/kgTCB   CE        5HT   MR       5HTP     5HT/5HTP   \n",
+       "3995487        70  10mg/kgTCB   CE        5HT   MR      DOPAC    5HT/DOPAC   \n",
+       "3995488        70  10mg/kgTCB   CE        5HT   MR         DA       5HT/DA   \n",
+       "3995489        70  10mg/kgTCB   CE        5HT   MR      5HIAA    5HT/5HIAA   \n",
+       "3995490        70  10mg/kgTCB   CE        5HT   MR        HVA      5HT/HVA   \n",
        "\n",
-       "          ratio  \n",
-       "9      2.078961  \n",
-       "10     2.529611  \n",
-       "11    22.791824  \n",
-       "12     8.116207  \n",
-       "13     1.002787  \n",
-       "...         ...  \n",
-       "9990  88.500024  \n",
-       "9991  73.912566  \n",
-       "9992  23.284040  \n",
-       "9994   6.021669  \n",
-       "9995   5.568548  \n",
+       "             ratio  \n",
+       "9         2.078961  \n",
+       "10        2.529611  \n",
+       "11       22.791824  \n",
+       "12        8.116207  \n",
+       "13        1.002787  \n",
+       "...            ...  \n",
+       "3995486   3.814665  \n",
+       "3995487   6.449441  \n",
+       "3995488  17.743371  \n",
+       "3995489   0.691156  \n",
+       "3995490   2.795106  \n",
        "\n",
-       "[8176 rows x 8 columns]"
+       "[3437550 rows x 8 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "from HPLC_MODULE_NOTEBOOK import * #Must be reimported when changes made to module file\n",
-    "\n",
-    "filename = 'TCB2_data_APRIL23.csv'  # TCB2 #using current working directory plus file name \n",
-    "compound_ratio_mapping = {'DOPAC': ['DA'],     # TCB2\n",
-    "                       '5HIAA': ['5HT'],\n",
-    "                       '3MT': ['DA'],\n",
-    "                       'HVA': ['DA', '3MT', 'DOPAC'],\n",
-    "                       'GLN': ['GLU']}\n",
-    "\n",
-    "treatment_mapping = {1: 'vehicles', 2: '10mg/kgTCB', 3: '3mg/kgTCB',\n",
-    "                  4: '0.3mg/kgTCB', 5: 'TCB+MDL', 6: '0.2mg/kgMDL'} \n",
-    "\n",
-    "palette_labeled = {'vehicles': \"white\",  # TCB2\n",
-    "                   '10mg/kgTCB': \"firebrick\",\n",
-    "                   '3mg/kgTCB': \"red\",\n",
-    "                   '0.3mg/kgTCB': \"salmon\",\n",
-    "                   'TCB+MDL': \"grey\",\n",
-    "                   '0.2mg/kgMDL': \"black\"}\n",
-    "ratios_df = getRatiosDf(filename, treatment_mapping)\n",
-    "getRatiosPerRegion(ratios_df, compound_ratio_mapping) #ratios of interest\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.path.isfile(f'{CACHE_DIR}/{filename}')\n",
-    "os.listdir(f'{CACHE_DIR}/{filename}')"
+    "getRatiosDf(filename)\n",
+    "getRatiosPerRegion(ratios_df, ratios_mapping)\n",
+    "getRatiosPerRegion(filename)\n"
    ]
   },
   {
