--- a/HPLC_RUN_NOTEBOOK.ipynb
+++ b/HPLC_RUN_NOTEBOOK.ipynb
@@ -34,17 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1: 'vehicles', 2: '10mg/kgTCB', 3: '3mg/kgTCB', 4: '0.3mg/kgTCB', 5: 'TCB+MDL', 6: '0.2mg/kgMDL'} /home/remi/jasmine/input/cache/TCB2_data_APRIL23/treatment_mapping.json\n",
-      "TREATMENT DICT SAVED TOO /home/remi/jasmine/input/cache/TCB2_data_APRIL23/treatment_mapping.json\n",
       "TREATMENT MAPPING {1: 'vehicles', 2: '10mg/kgTCB', 3: '3mg/kgTCB', 4: '0.3mg/kgTCB', 5: 'TCB+MDL', 6: '0.2mg/kgMDL'} SAVED TO /home/remi/jasmine/input/cache/TCB2_data_APRIL23 SUBCACHE\n",
-      "GETTING \"ratios_df\" FROM \"TCB2_data_APRIL23\" CACHE\n"
+      "GETTING \"ratios_df\" FROM \"TCB2_data_APRIL23\" CACHE\n",
+      "GETTING \"DOPAC:DA_5HIAA:5HT_3MT:DA_HVA:DA_3MT_DOPAC_GLN:GLU\" FROM \"TCB2_data_APRIL23\" CACHE\n"
      ]
     },
     {
@@ -79,17 +78,163 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1009</th>\n",
+       "      <td>2</td>\n",
+       "      <td>vehicles</td>\n",
+       "      <td>OF</td>\n",
+       "      <td>DOPAC</td>\n",
+       "      <td>OF</td>\n",
+       "      <td>DA</td>\n",
+       "      <td>DOPAC/DA</td>\n",
+       "      <td>1.441471</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1016</th>\n",
+       "      <td>2</td>\n",
+       "      <td>vehicles</td>\n",
+       "      <td>OF</td>\n",
+       "      <td>DOPAC</td>\n",
+       "      <td>PL</td>\n",
+       "      <td>DA</td>\n",
+       "      <td>DOPAC/DA</td>\n",
+       "      <td>3.853794</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1025</th>\n",
+       "      <td>2</td>\n",
+       "      <td>vehicles</td>\n",
+       "      <td>OF</td>\n",
+       "      <td>DOPAC</td>\n",
+       "      <td>CC</td>\n",
+       "      <td>DA</td>\n",
+       "      <td>DOPAC/DA</td>\n",
+       "      <td>2.173147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1032</th>\n",
+       "      <td>2</td>\n",
+       "      <td>vehicles</td>\n",
+       "      <td>OF</td>\n",
+       "      <td>DOPAC</td>\n",
+       "      <td>IC</td>\n",
+       "      <td>DA</td>\n",
+       "      <td>DOPAC/DA</td>\n",
+       "      <td>7.261334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1042</th>\n",
+       "      <td>2</td>\n",
+       "      <td>vehicles</td>\n",
+       "      <td>OF</td>\n",
+       "      <td>DOPAC</td>\n",
+       "      <td>M</td>\n",
+       "      <td>DA</td>\n",
+       "      <td>DOPAC/DA</td>\n",
+       "      <td>1.459981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3995213</th>\n",
+       "      <td>70</td>\n",
+       "      <td>10mg/kgTCB</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>HVA</td>\n",
+       "      <td>SN</td>\n",
+       "      <td>DOPAC</td>\n",
+       "      <td>HVA/DOPAC</td>\n",
+       "      <td>0.296836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3995221</th>\n",
+       "      <td>70</td>\n",
+       "      <td>10mg/kgTCB</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>HVA</td>\n",
+       "      <td>VTA</td>\n",
+       "      <td>DOPAC</td>\n",
+       "      <td>HVA/DOPAC</td>\n",
+       "      <td>0.140351</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3995231</th>\n",
+       "      <td>70</td>\n",
+       "      <td>10mg/kgTCB</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>HVA</td>\n",
+       "      <td>DR</td>\n",
+       "      <td>DOPAC</td>\n",
+       "      <td>HVA/DOPAC</td>\n",
+       "      <td>1.021433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3995240</th>\n",
+       "      <td>70</td>\n",
+       "      <td>10mg/kgTCB</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>HVA</td>\n",
+       "      <td>MR</td>\n",
+       "      <td>DOPAC</td>\n",
+       "      <td>HVA/DOPAC</td>\n",
+       "      <td>2.074015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3995249</th>\n",
+       "      <td>70</td>\n",
+       "      <td>10mg/kgTCB</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>HVA</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>DOPAC</td>\n",
+       "      <td>HVA/DOPAC</td>\n",
+       "      <td>1.189794</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>280761 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [mouse_id, treatment, BR_1, compound_1, BR_2, compound_2, compounds, ratio]\n",
-       "Index: []"
+       "         mouse_id   treatment BR_1 compound_1 BR_2 compound_2  compounds   \n",
+       "1009            2    vehicles   OF      DOPAC   OF         DA   DOPAC/DA  \\\n",
+       "1016            2    vehicles   OF      DOPAC   PL         DA   DOPAC/DA   \n",
+       "1025            2    vehicles   OF      DOPAC   CC         DA   DOPAC/DA   \n",
+       "1032            2    vehicles   OF      DOPAC   IC         DA   DOPAC/DA   \n",
+       "1042            2    vehicles   OF      DOPAC    M         DA   DOPAC/DA   \n",
+       "...           ...         ...  ...        ...  ...        ...        ...   \n",
+       "3995213        70  10mg/kgTCB   CE        HVA   SN      DOPAC  HVA/DOPAC   \n",
+       "3995221        70  10mg/kgTCB   CE        HVA  VTA      DOPAC  HVA/DOPAC   \n",
+       "3995231        70  10mg/kgTCB   CE        HVA   DR      DOPAC  HVA/DOPAC   \n",
+       "3995240        70  10mg/kgTCB   CE        HVA   MR      DOPAC  HVA/DOPAC   \n",
+       "3995249        70  10mg/kgTCB   CE        HVA   CE      DOPAC  HVA/DOPAC   \n",
+       "\n",
+       "            ratio  \n",
+       "1009     1.441471  \n",
+       "1016     3.853794  \n",
+       "1025     2.173147  \n",
+       "1032     7.261334  \n",
+       "1042     1.459981  \n",
+       "...           ...  \n",
+       "3995213  0.296836  \n",
+       "3995221  0.140351  \n",
+       "3995231  1.021433  \n",
+       "3995240  2.074015  \n",
+       "3995249  1.189794  \n",
+       "\n",
+       "[280761 rows x 8 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,22 +261,22 @@
     "                   '0.2mg/kgMDL': \"black\"}\n",
     "\n",
     "setTreatment(filename, treatment_mapping)\n",
-    "ratios_df = getRatiosDf(filename, treatment_mapping)\n",
-    "getRatiosPerRegion(ratios_df, compound_ratio_mapping) #ratios of interest\n",
+    "ratios_df = getRatiosDf(filename)\n",
+    "getRatiosPerRegion(filename, compound_ratio_mapping) #ratios of interest\n",
     "\n",
-    "doGrubsTest(getRawDF()) #Usage is something like this\n"
+    "# doGrubsTest(getRawDF()) #Usage is something like this\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GETTING \"ratios_df\" FROM \"TCB2_data_APRIL23\" CACHE\n"
+      "GETTING \"DOPAC:DA_5HIAA:5HT_3MT:DA_HVA:DA_3MT_DOPAC_GLN:GLU\" FROM \"TCB2_data_APRIL23\" CACHE\n"
      ]
     },
     {
@@ -167,59 +312,59 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>1009</th>\n",
        "      <td>2</td>\n",
        "      <td>vehicles</td>\n",
        "      <td>OF</td>\n",
-       "      <td>LDOPA</td>\n",
-       "      <td>PL</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>LDOPA/NA</td>\n",
-       "      <td>2.078961</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2</td>\n",
-       "      <td>vehicles</td>\n",
-       "      <td>OF</td>\n",
-       "      <td>LDOPA</td>\n",
-       "      <td>PL</td>\n",
        "      <td>DOPAC</td>\n",
-       "      <td>LDOPA/DOPAC</td>\n",
-       "      <td>2.529611</td>\n",
+       "      <td>OF</td>\n",
+       "      <td>DA</td>\n",
+       "      <td>DOPAC/DA</td>\n",
+       "      <td>1.441471</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>1016</th>\n",
        "      <td>2</td>\n",
        "      <td>vehicles</td>\n",
        "      <td>OF</td>\n",
-       "      <td>LDOPA</td>\n",
-       "      <td>PL</td>\n",
-       "      <td>5HTP</td>\n",
-       "      <td>LDOPA/5HTP</td>\n",
-       "      <td>22.791824</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2</td>\n",
-       "      <td>vehicles</td>\n",
-       "      <td>OF</td>\n",
-       "      <td>LDOPA</td>\n",
+       "      <td>DOPAC</td>\n",
        "      <td>PL</td>\n",
        "      <td>DA</td>\n",
-       "      <td>LDOPA/DA</td>\n",
-       "      <td>8.116207</td>\n",
+       "      <td>DOPAC/DA</td>\n",
+       "      <td>3.853794</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>1025</th>\n",
        "      <td>2</td>\n",
        "      <td>vehicles</td>\n",
        "      <td>OF</td>\n",
-       "      <td>LDOPA</td>\n",
-       "      <td>PL</td>\n",
-       "      <td>5HIAA</td>\n",
-       "      <td>LDOPA/5HIAA</td>\n",
-       "      <td>1.002787</td>\n",
+       "      <td>DOPAC</td>\n",
+       "      <td>CC</td>\n",
+       "      <td>DA</td>\n",
+       "      <td>DOPAC/DA</td>\n",
+       "      <td>2.173147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1032</th>\n",
+       "      <td>2</td>\n",
+       "      <td>vehicles</td>\n",
+       "      <td>OF</td>\n",
+       "      <td>DOPAC</td>\n",
+       "      <td>IC</td>\n",
+       "      <td>DA</td>\n",
+       "      <td>DOPAC/DA</td>\n",
+       "      <td>7.261334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1042</th>\n",
+       "      <td>2</td>\n",
+       "      <td>vehicles</td>\n",
+       "      <td>OF</td>\n",
+       "      <td>DOPAC</td>\n",
+       "      <td>M</td>\n",
+       "      <td>DA</td>\n",
+       "      <td>DOPAC/DA</td>\n",
+       "      <td>1.459981</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -233,104 +378,102 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3995486</th>\n",
+       "      <th>3995213</th>\n",
        "      <td>70</td>\n",
        "      <td>10mg/kgTCB</td>\n",
        "      <td>CE</td>\n",
-       "      <td>5HT</td>\n",
-       "      <td>MR</td>\n",
-       "      <td>5HTP</td>\n",
-       "      <td>5HT/5HTP</td>\n",
-       "      <td>3.814665</td>\n",
+       "      <td>HVA</td>\n",
+       "      <td>SN</td>\n",
+       "      <td>DOPAC</td>\n",
+       "      <td>HVA/DOPAC</td>\n",
+       "      <td>0.296836</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3995487</th>\n",
+       "      <th>3995221</th>\n",
        "      <td>70</td>\n",
        "      <td>10mg/kgTCB</td>\n",
        "      <td>CE</td>\n",
-       "      <td>5HT</td>\n",
+       "      <td>HVA</td>\n",
+       "      <td>VTA</td>\n",
+       "      <td>DOPAC</td>\n",
+       "      <td>HVA/DOPAC</td>\n",
+       "      <td>0.140351</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3995231</th>\n",
+       "      <td>70</td>\n",
+       "      <td>10mg/kgTCB</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>HVA</td>\n",
+       "      <td>DR</td>\n",
+       "      <td>DOPAC</td>\n",
+       "      <td>HVA/DOPAC</td>\n",
+       "      <td>1.021433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3995240</th>\n",
+       "      <td>70</td>\n",
+       "      <td>10mg/kgTCB</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>HVA</td>\n",
        "      <td>MR</td>\n",
        "      <td>DOPAC</td>\n",
-       "      <td>5HT/DOPAC</td>\n",
-       "      <td>6.449441</td>\n",
+       "      <td>HVA/DOPAC</td>\n",
+       "      <td>2.074015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3995488</th>\n",
+       "      <th>3995249</th>\n",
        "      <td>70</td>\n",
        "      <td>10mg/kgTCB</td>\n",
        "      <td>CE</td>\n",
-       "      <td>5HT</td>\n",
-       "      <td>MR</td>\n",
-       "      <td>DA</td>\n",
-       "      <td>5HT/DA</td>\n",
-       "      <td>17.743371</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3995489</th>\n",
-       "      <td>70</td>\n",
-       "      <td>10mg/kgTCB</td>\n",
-       "      <td>CE</td>\n",
-       "      <td>5HT</td>\n",
-       "      <td>MR</td>\n",
-       "      <td>5HIAA</td>\n",
-       "      <td>5HT/5HIAA</td>\n",
-       "      <td>0.691156</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3995490</th>\n",
-       "      <td>70</td>\n",
-       "      <td>10mg/kgTCB</td>\n",
-       "      <td>CE</td>\n",
-       "      <td>5HT</td>\n",
-       "      <td>MR</td>\n",
        "      <td>HVA</td>\n",
-       "      <td>5HT/HVA</td>\n",
-       "      <td>2.795106</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>DOPAC</td>\n",
+       "      <td>HVA/DOPAC</td>\n",
+       "      <td>1.189794</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3437550 rows × 8 columns</p>\n",
+       "<p>280761 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         mouse_id   treatment BR_1 compound_1 BR_2 compound_2    compounds   \n",
-       "9               2    vehicles   OF      LDOPA   PL         NA     LDOPA/NA  \\\n",
-       "10              2    vehicles   OF      LDOPA   PL      DOPAC  LDOPA/DOPAC   \n",
-       "11              2    vehicles   OF      LDOPA   PL       5HTP   LDOPA/5HTP   \n",
-       "12              2    vehicles   OF      LDOPA   PL         DA     LDOPA/DA   \n",
-       "13              2    vehicles   OF      LDOPA   PL      5HIAA  LDOPA/5HIAA   \n",
-       "...           ...         ...  ...        ...  ...        ...          ...   \n",
-       "3995486        70  10mg/kgTCB   CE        5HT   MR       5HTP     5HT/5HTP   \n",
-       "3995487        70  10mg/kgTCB   CE        5HT   MR      DOPAC    5HT/DOPAC   \n",
-       "3995488        70  10mg/kgTCB   CE        5HT   MR         DA       5HT/DA   \n",
-       "3995489        70  10mg/kgTCB   CE        5HT   MR      5HIAA    5HT/5HIAA   \n",
-       "3995490        70  10mg/kgTCB   CE        5HT   MR        HVA      5HT/HVA   \n",
+       "         mouse_id   treatment BR_1 compound_1 BR_2 compound_2  compounds   \n",
+       "1009            2    vehicles   OF      DOPAC   OF         DA   DOPAC/DA  \\\n",
+       "1016            2    vehicles   OF      DOPAC   PL         DA   DOPAC/DA   \n",
+       "1025            2    vehicles   OF      DOPAC   CC         DA   DOPAC/DA   \n",
+       "1032            2    vehicles   OF      DOPAC   IC         DA   DOPAC/DA   \n",
+       "1042            2    vehicles   OF      DOPAC    M         DA   DOPAC/DA   \n",
+       "...           ...         ...  ...        ...  ...        ...        ...   \n",
+       "3995213        70  10mg/kgTCB   CE        HVA   SN      DOPAC  HVA/DOPAC   \n",
+       "3995221        70  10mg/kgTCB   CE        HVA  VTA      DOPAC  HVA/DOPAC   \n",
+       "3995231        70  10mg/kgTCB   CE        HVA   DR      DOPAC  HVA/DOPAC   \n",
+       "3995240        70  10mg/kgTCB   CE        HVA   MR      DOPAC  HVA/DOPAC   \n",
+       "3995249        70  10mg/kgTCB   CE        HVA   CE      DOPAC  HVA/DOPAC   \n",
        "\n",
-       "             ratio  \n",
-       "9         2.078961  \n",
-       "10        2.529611  \n",
-       "11       22.791824  \n",
-       "12        8.116207  \n",
-       "13        1.002787  \n",
-       "...            ...  \n",
-       "3995486   3.814665  \n",
-       "3995487   6.449441  \n",
-       "3995488  17.743371  \n",
-       "3995489   0.691156  \n",
-       "3995490   2.795106  \n",
+       "            ratio  \n",
+       "1009     1.441471  \n",
+       "1016     3.853794  \n",
+       "1025     2.173147  \n",
+       "1032     7.261334  \n",
+       "1042     1.459981  \n",
+       "...           ...  \n",
+       "3995213  0.296836  \n",
+       "3995221  0.140351  \n",
+       "3995231  1.021433  \n",
+       "3995240  2.074015  \n",
+       "3995249  1.189794  \n",
        "\n",
-       "[3437550 rows x 8 columns]"
+       "[280761 rows x 8 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "getRatiosDf(filename)\n",
-    "getRatiosPerRegion(ratios_df, ratios_mapping)\n",
-    "getRatiosPerRegion(filename)\n"
+    "getRatiosPerRegion(filename, compound_ratio_mapping) #ratios of interest"
    ]
   },
   {
