starting correlations fuck = removing n<n_minimum

--- a/HPLC_RUN_NOTEBOOK.ipynb
+++ b/HPLC_RUN_NOTEBOOK.ipynb
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -624,153 +624,111 @@
      "text": [
       "GETTING \"compound_df\" FROM \"TCB2_data_HPLC\" CACHE\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mouse_id</th>\n",
-       "      <th>treatment</th>\n",
-       "      <th>BR</th>\n",
-       "      <th>compound</th>\n",
-       "      <th>ng_mg</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>vehicles</td>\n",
-       "      <td>OF</td>\n",
-       "      <td>ASP</td>\n",
-       "      <td>86.863115</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>vehicles</td>\n",
-       "      <td>OF</td>\n",
-       "      <td>GLU</td>\n",
-       "      <td>509.836736</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>vehicles</td>\n",
-       "      <td>OF</td>\n",
-       "      <td>ASPN</td>\n",
-       "      <td>2.842720</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>vehicles</td>\n",
-       "      <td>OF</td>\n",
-       "      <td>HIS</td>\n",
-       "      <td>7.785802</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2</td>\n",
-       "      <td>vehicles</td>\n",
-       "      <td>OF</td>\n",
-       "      <td>LSER</td>\n",
-       "      <td>37.902285</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39930</th>\n",
-       "      <td>70</td>\n",
-       "      <td>10mg/kgTCB</td>\n",
-       "      <td>CE</td>\n",
-       "      <td>DOPAC</td>\n",
-       "      <td>0.029512</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39931</th>\n",
-       "      <td>70</td>\n",
-       "      <td>10mg/kgTCB</td>\n",
-       "      <td>CE</td>\n",
-       "      <td>DA</td>\n",
-       "      <td>0.026709</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39932</th>\n",
-       "      <td>70</td>\n",
-       "      <td>10mg/kgTCB</td>\n",
-       "      <td>CE</td>\n",
-       "      <td>5HIAA</td>\n",
-       "      <td>0.074892</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39933</th>\n",
-       "      <td>70</td>\n",
-       "      <td>10mg/kgTCB</td>\n",
-       "      <td>CE</td>\n",
-       "      <td>HVA</td>\n",
-       "      <td>0.035113</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39934</th>\n",
-       "      <td>70</td>\n",
-       "      <td>10mg/kgTCB</td>\n",
-       "      <td>CE</td>\n",
-       "      <td>5HT</td>\n",
-       "      <td>0.109190</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>39935 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       mouse_id   treatment  BR compound       ng_mg\n",
-       "0             2    vehicles  OF      ASP   86.863115\n",
-       "1             2    vehicles  OF      GLU  509.836736\n",
-       "2             2    vehicles  OF     ASPN    2.842720\n",
-       "3             2    vehicles  OF      HIS    7.785802\n",
-       "4             2    vehicles  OF     LSER   37.902285\n",
-       "...         ...         ...  ..      ...         ...\n",
-       "39930        70  10mg/kgTCB  CE    DOPAC    0.029512\n",
-       "39931        70  10mg/kgTCB  CE       DA    0.026709\n",
-       "39932        70  10mg/kgTCB  CE    5HIAA    0.074892\n",
-       "39933        70  10mg/kgTCB  CE      HVA    0.035113\n",
-       "39934        70  10mg/kgTCB  CE      5HT    0.109190\n",
-       "\n",
-       "[39935 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "getCompoundDf(filename)"
+    "df = getCompoundDf(filename)\n",
+    "\n",
+    "def calculate_pvalues(df):\n",
+    "    '''Calculates p values from a pearson correlation\n",
+    "        output is a square df of p values comparing column to column of origional df'''\n",
+    "\n",
+    "    dfcols = pd.DataFrame(columns=df.columns)\n",
+    "    pvalues = dfcols.transpose().join(dfcols, how='outer')  # creating empty df\n",
+    "\n",
+    "    for r in df.columns:\n",
+    "        for c in df.columns:\n",
+    "            # count Nans in list, if not 0 then cleaning needed\n",
+    "            Nan_r = df[r].isnull().sum()\n",
+    "            Nan_c = df[c].isnull().sum()\n",
+    "\n",
+    "            if Nan_r or Nan_c > 0:\n",
+    "                print('unequal length data, trimming nans')\n",
+    "                print('NaN count: ', Nan_r, ' =  ',\n",
+    "                      r, ' and ', Nan_c, ' = ', c)\n",
+    "\n",
+    "                index_nan_r = df[df[r].isnull(\n",
+    "                )].index.tolist()\n",
+    "                clean_r = df[r].drop(index=index_nan_r)\n",
+    "                clean_c = df[c].drop(index=index_nan_r)\n",
+    "                Nan_clean_c = clean_c.isnull().sum()\n",
+    "\n",
+    "                if Nan_clean_c > 0:  # if we still have Nans in the other column\n",
+    "                    index_nan_c = df[df[c].isnull(\n",
+    "                    )].index.tolist()\n",
+    "                    # only deleting indexes that have not been removed\n",
+    "                    index_nan_c_no_duplicates = [\n",
+    "                        x for x in index_nan_c if x not in index_nan_r]\n",
+    "                    clean_r = clean_r.drop(index=index_nan_c_no_duplicates)\n",
+    "                    clean_c = clean_c.drop(index=index_nan_c_no_duplicates)\n",
+    "                    print('both trimmed, length = ', len(clean_r),)\n",
+    "\n",
+    "                else:\n",
+    "                    print('trimed length = ', len(clean_r))\n",
+    "\n",
+    "            else:\n",
+    "                clean_r = df[r]\n",
+    "                clean_c = df[c]\n",
+    "\n",
+    "            df[r]\n",
+    "            pvalues[r][c] = scipy.stats.pearsonr(clean_r, clean_c)[1]\n",
+    "\n",
+    "\n",
+    "    return pvalues\n",
+    "\n",
+    "\n",
+    "BR_column_order = ['OF', 'PL', 'CC', 'IC', 'M', 'SJ', 'SL1', 'SR1', 'SL6', 'SR6', 'AC', 'V' , \n",
+    "            'Am', 'dH', 'vH', 'NAc', 'VM', 'DM', 'VL', 'DL', 'MD', 'VPL', 'VPR', 'DG', \n",
+    "            'Y', 'SC', 'SN', 'VTA', 'DR', 'MR', 'CE' ] \n",
+    "\n",
+    "#within a BR between compounds\n",
+    "# for treatment_BR, treatment_BR_groupby_df in df.groupby(by =['treatment', 'BR']):\n",
+    "#     print(treatment_BR_groupby_df)\n",
+    "    #create corr_df with a column for each compound beloning to the group\n",
+    "\n",
+    "\n",
+    "for treatment_compound, treatment_compound_groupby_df in df.groupby(by =['treatment', 'compound']):\n",
+    "    treatment = treatment_compound[0]\n",
+    "    compound = treatment_compound[1]\n",
+    "    #create df_to_correlate: index as mouse number, column as BR, ng_mg and NaN where data missing \n",
+    "\n",
+    "    BR_list= treatment_compound_groupby_df['BR'].unique().tolist() #get brain regions with any data from df\n",
+    "    \n",
+    "    \n",
+    "    # if BR_column_order = True: ## will add order as a potional vairable \n",
+    "    BR_list = [x for x in BR_column_order if x in BR_list]\n",
+    "    # print(f'reordered BR_list for {treatment} within {compound} : {BR_list}')\n",
+    "\n",
+    "    mouse_list = treatment_compound_groupby_df['mouse_id'].unique().tolist() \n",
+    "    df_to_correlate = pd.DataFrame(np.NaN, index=mouse_list, columns=BR_list) #create empty df \n",
+    "    #fill df_to_correlate\n",
+    "    for single_BR in BR_list: \n",
+    "        BR_df = treatment_compound_groupby_df.loc[treatment_compound_groupby_df['BR'] == single_BR]#, 'ng_mg', 'mouse_ID'] #returns series with just ng_mg for BR\n",
+    "        for row_ind, row in BR_df.iterrows():  #row is a series that can be called row['colname']\n",
+    "            df_to_correlate.at[row['mouse_id'],single_BR]= row['ng_mg']\n",
+    "\n",
+    "    \n",
+    "    #remove columns with n< n_minimum i.e. 6\n",
+    "\n",
+    "    n_count_series = df_to_correlate.count()\n",
+    "    # cunt = n_count_series[n_count_series <= 6].index[0]\n",
+    "    \n",
+    "    # for single_BR in df_to_correlate:  #SHIT I TRIED DELETE WHEN n<n_minimum a vairable that will be fed to function but doesnt exist yet WORKS\n",
+    "    #     print(df_to_correlate[single_BR])\n",
+    "    #     n = df_to_correlate[single_BR].count()\n",
+    "    #     print(f'{single_BR} data n = {n}')\n",
+    "\n",
+    "    #do correlations WORKING\n",
+    "    # corr_matrix_BR = df_to_correlate.corr('pearson', min_periods=1)\n",
+    "\n",
+    "\n",
+    "    # p_value_matrix = calculate_pvalues(corr_matrix_BR)  #this is the function above it is dirty and needs to be cleaned but it will be how correlograms work from here on\n",
+    "\n",
+    "    # # removing collums the rows that have all 'NaN' vslues\n",
+    "    # p_value_matrix_clean = p_value_matrix.dropna(axis=1, how='all')\n",
+    "    # p_value_matrix_clean = p_value_matrix_clean.dropna(axis=0, how='all')\n",
+    "\n",
+    "    #plot shit # and yes i need to modulatrise and will do once we have the scafold down! "
    ]
   }
  ],
