all correlation for wi comp drop n<6 issue NOTOK

--- a/HPLC_RUN_NOTEBOOK.ipynb
+++ b/HPLC_RUN_NOTEBOOK.ipynb
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -623,6 +623,19 @@
      "output_type": "stream",
      "text": [
       "GETTING \"compound_df\" FROM \"TCB2_data_HPLC\" CACHE\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Multi-dimensional indexing (e.g. `obj[:, None]`) is no longer supported. Convert to a numpy array before indexing instead.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[86], line 85\u001b[0m\n\u001b[1;32m     82\u001b[0m \u001b[39m#remove columns with n< n_minimum i.e. 6\u001b[39;00m\n\u001b[1;32m     84\u001b[0m n_count_series \u001b[39m=\u001b[39m df_to_correlate\u001b[39m.\u001b[39mcount()\n\u001b[0;32m---> 85\u001b[0m cunt \u001b[39m=\u001b[39m n_count_series\u001b[39m.\u001b[39;49mindex[n_count_series[\u001b[39m0\u001b[39;49m] \u001b[39m==\u001b[39;49m \u001b[39m5\u001b[39;49m]\u001b[39m.\u001b[39mtolist()\n\u001b[1;32m     86\u001b[0m \u001b[39m# cunt = n_count_series[n_count_series <= 6].index[0]\u001b[39;00m\n\u001b[1;32m     87\u001b[0m \n\u001b[1;32m     88\u001b[0m \u001b[39m# for single_BR in df_to_correlate:  #SHIT I TRIED DELETE WHEN n<n_minimum a vairable that will be fed to function but doesnt exist yet WORKS\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    102\u001b[0m \n\u001b[1;32m    103\u001b[0m \u001b[39m#plot shit # and yes i need to modulatrise and will do once we have the scafold down! \u001b[39;00m\n",
+      "File \u001b[0;32m~/Desktop/phd/.venv/lib/python3.9/site-packages/pandas/core/indexes/base.py:5198\u001b[0m, in \u001b[0;36mIndex.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   5196\u001b[0m \u001b[39m# Because we ruled out integer above, we always get an arraylike here\u001b[39;00m\n\u001b[1;32m   5197\u001b[0m \u001b[39mif\u001b[39;00m result\u001b[39m.\u001b[39mndim \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m-> 5198\u001b[0m     disallow_ndim_indexing(result)\n\u001b[1;32m   5200\u001b[0m \u001b[39m# NB: Using _constructor._simple_new would break if MultiIndex\u001b[39;00m\n\u001b[1;32m   5201\u001b[0m \u001b[39m#  didn't override __getitem__\u001b[39;00m\n\u001b[1;32m   5202\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_constructor\u001b[39m.\u001b[39m_simple_new(result, name\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_name)\n",
+      "File \u001b[0;32m~/Desktop/phd/.venv/lib/python3.9/site-packages/pandas/core/indexers/utils.py:343\u001b[0m, in \u001b[0;36mdisallow_ndim_indexing\u001b[0;34m(result)\u001b[0m\n\u001b[1;32m    335\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    336\u001b[0m \u001b[39mHelper function to disallow multi-dimensional indexing on 1D Series/Index.\u001b[39;00m\n\u001b[1;32m    337\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    340\u001b[0m \u001b[39min GH#30588.\u001b[39;00m\n\u001b[1;32m    341\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    342\u001b[0m \u001b[39mif\u001b[39;00m np\u001b[39m.\u001b[39mndim(result) \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m--> 343\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    344\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mMulti-dimensional indexing (e.g. `obj[:, None]`) is no longer \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    345\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39msupported. Convert to a numpy array before indexing instead.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    346\u001b[0m     )\n",
+      "\u001b[0;31mValueError\u001b[0m: Multi-dimensional indexing (e.g. `obj[:, None]`) is no longer supported. Convert to a numpy array before indexing instead."
      ]
     }
    ],
@@ -711,6 +724,7 @@
     "    #remove columns with n< n_minimum i.e. 6\n",
     "\n",
     "    n_count_series = df_to_correlate.count()\n",
+    "    cunt = n_count_series.index[n_count_series[0] == 5].tolist()\n",
     "    # cunt = n_count_series[n_count_series <= 6].index[0]\n",
     "    \n",
     "    # for single_BR in df_to_correlate:  #SHIT I TRIED DELETE WHEN n<n_minimum a vairable that will be fed to function but doesnt exist yet WORKS\n",
@@ -724,11 +738,24 @@
     "\n",
     "    # p_value_matrix = calculate_pvalues(corr_matrix_BR)  #this is the function above it is dirty and needs to be cleaned but it will be how correlograms work from here on\n",
     "\n",
-    "    # # removing collums the rows that have all 'NaN' vslues\n",
+    "    # # removing collums the rows that have all 'NaN' vslues #will intergrate with the calculate p_value matric fun once n<6 removed\n",
     "    # p_value_matrix_clean = p_value_matrix.dropna(axis=1, how='all')\n",
     "    # p_value_matrix_clean = p_value_matrix_clean.dropna(axis=0, how='all')\n",
     "\n",
-    "    #plot shit # and yes i need to modulatrise and will do once we have the scafold down! "
+    "    #plot shit # and yes i need to modulatrise and will do once we have it runnning\n",
+    "    fig, ax = plt.subplots(figsize=(16, 10))\n",
+    "    mask = np.invert(np.tril(p_value_matrix < p_value))\n",
+    "\n",
+    "    heatmap = sns.heatmap(corr_matrix_BR, vmin=-1, vmax=1,\n",
+    "                            annot=True, cmap='BrBG', mask=mask, annot_kws={\"size\": 8})\n",
+    "    heatmap.set_title(\n",
+    "        compound+'  in  ' + treatment, fontdict={'fontsize': 18}, pad=12)\n",
+    "    ax.set_xticklabels(\n",
+    "        ax.get_xticklabels(),\n",
+    "        rotation=45,\n",
+    "        horizontalalignment='right')\n",
+    "    ax.set_ylabel('')\n",
+    "    ax.set_xlabel('')\n"
    ]
   }
  ],
